removed the OBIS logo to replace it with the IOC-OBIS logo, fixedlogo alignement in the footer, cleaned the css, improved the mobile experience

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,6 @@ body {
     overflow-x: hidden;
 }
 
-.carousel {
-    overflow: hidden;
-}
-
-.carousel-inner {
-    overflow: hidden;
-}
 
 .ioc-top-banner {
     background-color: #020282;
@@ -283,11 +276,6 @@ h4 {
     margin-top: 3rem;
 }
 
-.mission2 {
-    font-weight: 400;
-    font-size: 1.3em;
-    line-height: 1.2em;
-}
 
 a {
     font-weight: bold;
@@ -375,11 +363,6 @@ a:hover {
     font-weight: bold;
 }
 
-.btn-newsletter, .btn-newsletter:hover {
-    background-color: var(--highlight-yellow);
-    color: var(--text-blue) !important;
-    border-radius: 0px;
-}
 
 .btn-cta {
     display: inline-block;
@@ -397,35 +380,6 @@ a:hover {
     color: var(--text-blue) !important;
 }
 
-.form-group.required {
-    display: flex;
-    gap: 0;
-}
-
-.form-group.required input[type="email"] {
-    flex: 1;
-    border-radius: 0;
-    border-right: none;
-    border: 0px;
-    min-width: 0;
-    background-color: var(--bg-light);
-}
-
-.form-group.required button {
-    flex: 0 0 auto;
-    border-radius: 0;
-    border: 0px;
-    border-left: none;
-    background-color: var(--highlight-yellow);
-    color: var(--text-blue);
-    font-weight: bold;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-}
-
-.form-group.required button:hover {
-    background-color: var(--highlight-yellow);
-}
 
 .logos .card-img-top {
     display: block;
@@ -433,9 +387,6 @@ a:hover {
     margin-right: auto;
 }
 
-#join h2 {
-    font-size: 2em;
-}
 
 .pt-6, .py-6 {
     padding-top: 6rem !important;
@@ -1449,8 +1400,9 @@ button {
 
 .edna-footer__logos3{
   display:flex;
+  flex-direction:row;
   align-items:center;
-  justify-content:space-between;
+  gap:6rem;
   width:100%;
 }
 
@@ -1461,27 +1413,15 @@ button {
   display:block;
 }
 
-.edna-footer__footer-logo--ioc,
-.edna-footer__footer-logo--obis,
 .edna-footer__footer-logo--wilderlab {
   filter: brightness(0) invert(1);
 }
 
-.edna-footer__footer-logo--ioc{
-  max-height:77px;
-}
-
-.edna-footer__footer-logo--obis{
-  max-height:54px;
-}
 
 .edna-footer__footer-logo--wilderlab{
   max-height:60px;
 }
 
-.edna-footer__footer-logo--powered{
-  max-height:64px;
-}
 
 .edna-footer__footer-logo--decade{
   max-height: 100px;
